<resources>

  <string name="app_name">DFC Group</string>
  <string name="common_url">https://dfcgroup.in/crmapi/public/api/</string>
  <string name="ongoing">Ongoing Trips</string>
  <string name="ideal">Ideal Vehicles</string>
  <string name="currant">Currant Month</string>
  <string name="previous">Previous Month</string>
  <string name="pending_task">Pending Tasks</string>
  <string name="complete_task">Complete Tasks</string>
  <string name="account_deactivated">Account Deactivated</string>
  <string name="your_account_is_deactivated">Your Account is Deactivated</string>
  <string name="ok">OK</string>
  <string name="delete_my_account">Delete My Account ??</string>
  <string name="click_here">Click Here</string>
  <string name="get_started">Get Started</string>
  <string name="welcome_to_dfc_group">Welcome to DFC Group</string>
  <string name="dfc_logo">DFC Logo</string>
  <string name="truck">Truck</string>
  <string name="this_app_provides_features_designed_to_streamline_your_workflow_foster_collaboration_and_boost_overall_productivity_we_re_dedicated_to_supporting_you_at_every_stage_of_your_journey">This app provides features designed to streamline your workflow, foster collaboration, and boost overall productivity. We\'re dedicated to supporting you at every stage of your journey.</string>
  <string name="please_wait">Please wait…</string>
  <string name="ag">AG</string>
  <string name="solutions">Solutions</string>
  <string name="website_web_application_mobile_application_digital_marketing">WEBSITE | WEB APPLICATION \nMOBILE APPLICATION | DIGITAL MARKETING</string>
  <string name="login_account">Login Account</string>
  <string name="hello_welcome_back_to_your_account">Hello, welcome back to your account</string>
  <string name="mobile_number">📞Mobile Number</string>
  <string name="welcome">Welcome</string>
  <string name="we_will_send_you_an">We will send you an</string>
  <string name="one_time_password_otp">One Time Password(OTP)</string>
  <string name="on_below_mobile_number">on below mobile number</string>
  <string name="enter_your_mobile_number">Enter your Mobile Number</string>
  <string name="_91">+91</string>
  <string name="your_password">Your Password</string>
  <string name="password">Password</string>
  <string name="next">Next</string>
  <string name="i_have_read_amp_agree_to_the"><![CDATA[I have read & agree to the]]></string>
  <string name="privacy_policy"><u>Privacy Policy</u></string>
  <string name="okay">Okay</string>
  <string name="_123456">123456</string>
  <string name="verification">Verification</string>
  <string name="mobile_number_verification">Mobile Number Verification</string>
  <string name="otp_verification">OTP Verification</string>
  <string name="enter_otp_sent_to">Enter OTP sent to</string>
  <string name="one_time_password">One Time Password</string>
  <string name="on_this_mobile_number">on this mobile number</string>
  <string name="enter_otp">Enter OTP</string>
  <string name="did_t_receive_the_otp">Didn’t receive the OTP?</string>
  <string name="resend_otp"><u>Resend OTP</u></string>
  <string name="verify">Verify</string>
  <string name="home">Home</string>
  <string name="contact_information">Contact Information</string>
  <string name="email">✉️Email</string>
  <string name="vehicle">Vehicle</string>
  <string name="_colon">": "</string>
  <string name="address">📍Address</string>
  <string name="lic_expiry">🪪Lic Expiry</string>
  <string name="lic_no">🪪Lic no</string>
  <string name="dl_expiry">🪪DL Expiry</string>
  <string name="dl_no">🪪DL No</string>
  <string name="logout">Logout</string>
  <string name="history">History</string>
  <string name="incentive">Incentive</string>
  <string name="profile">Profile</string>
  <string name="back">Back</string>
  <string name="vehicle_service">Vehicle Service</string>
  <string name="line">Line</string>
  <string name="service_date">Service Date</string>
  <string name="total_amount">Total Amount</string>
  <string name="km">KM</string>
  <string name="description">Description</string>
  <string name="recreate">Recreate</string>
  <string name="_equal">=</string>
  <string name="amount">Amount</string>
  <string name="plus">Plus</string>
  <string name="location">Location</string>
  <string name="voucher_voucher">Voucher : Voucher</string>
  <string name="date">Date</string>
  <string name="date_date">date : date</string>
  <string name="driver">Driver</string>
  <string name="debit_debit">debit : debit</string>
  <string name="_ruppee">₹</string>
  <string name="money_money">money : money</string>
  <string name="status_other_issue">Status : Other Issue</string>
  <string name="distance">Distance</string>
  <string name="bhsd">BHSD</string>
  <string name="_3_ltr">: 3 Ltr</string>
  <string name="fhsd">FHSD</string>
  <string name="_15_ltr">: 15 Ltr</string>
  <string name="shsd">SHSD</string>
  <string name="_13_ltr">: 13 Ltr</string>
  <string name="adv">ADV</string>
  <string name="_1">1</string>
  <string name="service_type">Service Type</string>
  <string name="service_amount">Service Amount</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="_space">" "</string>
  <string name="update">Update</string>
  <string name="_0">: 0</string>
  <string name="eclips">Eclips</string>
  <string name="last_tripe_date_before_days">Last Tripe Date / Before Days</string>
  <string name="eye">Eye</string>
  <string name="details">Details</string>
  <string name="trips">Trips</string>
  <string name="time">Time</string>
  <string name="no_data_found">No data Found</string>
  <string name="status_active">Status : Active</string>
  <string name="call">Call</string>
  <string name="whatsapp">WhatsApp</string>
  <string name="teaching_academician">Teaching / Academician</string>
  <string name="select_branch">Select Branch</string>
  <string name="update_status">Update Status</string>
  <string name="pending">Pending</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="finish">Finish</string>
  <string name="branch">Branch</string>
  <string name="company">Company</string>
  <string name="vehicle_type">📇Vehicle Type</string>
  <string name="model_year">Model Year</string>
  <string name="insurance_due">Insurance Due</string>
  <string name="permit_due">Permit Due</string>
  <string name="fc_due">FC Due</string>
  <string name="mileage">Mileage</string>
  <string name="all_vehicle_list">All Vehicle List</string>
  <string name="balance">Balance:</string>
  <string name="save">Save</string>
  <string name="update_trip">Update Trip</string>
  <string name="loading_point">Loading Point :</string>
  <string name="agent">Agent</string>
  <string name="km_colan">KM :</string>
  <string name="bhsd_">BHSD :</string>
  <string name="fhsd_">FHSD :</string>
  <string name="shsd_in_ltr">SHSD in Ltr</string>
  <string name="supplier">Supplier</string>
  <string name="remarks">Remarks</string>
  <string name="vehicle_list_">Vehicle list -</string>
  <string name="to_do_list">To Do List</string>
  <string name="add">Add</string>
  <string name="create_payment">Create Payment</string>
  <string name="payment_date">Payment Date</string>
  <string name="transaction_detail">Transaction Detail</string>
  <string name="cash">Cash</string>
  <string name="narration">Narration</string>
  <string name="clear_trip">Clear Trip</string>
  <string name="branch_name">Branch Name</string>
  <string name="testing_driver">TestingDriver</string>
  <string name="status_assigned">Status : Assigned</string>
  <string name="accept">Accept</string>
  <string name="advance_money">Advance Money</string>
  <string name="shsd_">SHSD :</string>
  <string name="no_trip_found">No Trip Found</string>
  <string name="payment">Payment</string>
  <string name="expenses">Expenses</string>
  <string name="drivers">Drivers</string>
  <string name="service">Service</string>
  <string name="_0_">0</string>
  <string name="create_trip">Create Trip</string>
  <string name="select_date">Select Date</string>
  <string name="expenses_list">Expenses List</string>
  <string name="balance_colon">Balance:</string>
  <string name="driver_list">Driver List</string>
  <string name="vehicle_list___">Vehicle list -</string>
  <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?
    This action cannot be undone.</string>
  <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
  <string name="reached">Reached</string>
    <string name="select_agent">Select Agent</string>

</resources>