<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityLogin"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <!-- Page Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/verification"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Subheading -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mobile_number_verification"
                android:textAlignment="viewStart"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <!-- OTP Illustration -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_otp"
                android:contentDescription="@string/app_name" />

            <!-- OTP Heading -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/otp_verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- OTP Explanation -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_otp_sent_to"
                    android:textAlignment="center"
                    android:textColor="@color/light_grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/mobileNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/one_time_password"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- Optional secondary message (currently hidden) -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/on_this_mobile_number"
                android:textAlignment="center"
                android:textColor="@color/light_grey"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- OTP Input Field -->
            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                app:height="40dp"
                app:width="40dp"
                app:bar_enabled="false"
                app:bar_height="2dp"
                app:box_margin="0dp"
                app:length="6"
                app:otp_box_background="@drawable/bg_txt_box"
                app:otp_text_size="24dp"/>

            <!-- Resend OTP Message -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/don_t_receive_the_otp"
                android:textAlignment="center"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <!-- Resend OTP Link -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/resend_otp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <!-- Verify Button -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvVerifyOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="45dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/verify"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/progress_loading_overlay" />

</FrameLayout>
