<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardCornerRadius="10dp"
  app:cardElevation="1dp"
  android:layout_marginStart="8dp"
  android:layout_marginEnd="8dp"
  android:layout_marginTop="5dp"
  android:layout_marginBottom="5dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1">

        <androidx.cardview.widget.CardView
          android:layout_width="90dp"
          android:layout_height="110dp"
          app:cardCornerRadius="5dp">

            <ImageView
              android:id="@+id/profile"
              android:layout_width="90dp"
              android:layout_height="100dp"
              android:contentDescription="@string/driver"
              android:src="@drawable/driver_img"
              android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_weight="0.6">

            <TextView
              android:id="@+id/name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:layout_gravity="center"
              android:gravity="center"
              android:textSize="16sp"
              android:textStyle="bold"
              android:padding="5dp"
              android:textColor="@color/black"/>
            <TextView
              android:id="@+id/Active"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/status_active"
              android:layout_gravity="center"
              android:gravity="center"
              android:textSize="13sp"
              android:textColor="#0CA5A2"
              android:textStyle="bold"
              />

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="15dp"
              android:layout_gravity="center"
              android:gravity="center">

                <ImageView
                  android:layout_width="12dp"
                  android:layout_height="12dp"
                  android:contentDescription="@string/date"
                  android:src="@drawable/ic_date"/>

                <TextView
                  android:id="@+id/date"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"
                  android:layout_marginStart="5dp"
                  android:textColor="@color/black"/>

            </LinearLayout>


            <TextView
              android:id="@+id/mobile"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:visibility="gone"
              android:layout_gravity="center"
              android:gravity="center"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:layout_weight="0.8"
          android:layout_margin="10dp">

            <ImageView
              android:id="@+id/call"
              android:layout_width="70dp"
              android:layout_height="50dp"
              android:contentDescription="@string/call"
              android:src="@drawable/call"/>

            <ImageView
              android:id="@+id/whatsapp"
              android:layout_width="70dp"
              android:layout_height="40dp"
              android:contentDescription="@string/whatsapp"
              android:src="@drawable/wht"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>